--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,8 @@ services:
       QUEUE_NAME: ${QUEUE_NAME}
     ports:
       - "8000:8000"
+    volumes:
+      - ./models:/app/models:ro
     depends_on:
       db:
         condition: service_healthy
@@ -48,6 +50,8 @@ services:
       RABBITMQ_URL: ${RABBITMQ_URL}
       QUEUE_NAME: ${QUEUE_NAME}
       MODEL_VERSION: ${MODEL_VERSION}
+    volumes:
+      - ./models:/app/models:ro
     depends_on:
       db:
         condition: service_healthy
