--- a/worker/requirements.txt
+++ b/worker/requirements.txt
@@ -2,3 +2,8 @@ sqlalchemy==2.0.36
 psycopg[binary]==3.2.3
 pika==1.3.2
 pydantic-settings==2.6.1
+
+catboost==1.2.7
+pandas==2.2.3
+numpy==2.1.3
+joblib==1.4.2
