--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,5 +58,14 @@ services:
       rabbitmq:
         condition: service_healthy
 
+  ui:
+    build: ./ui
+    environment:
+      API_BASE_URL: http://api:8000
+    ports:
+      - "8501:8501"
+    depends_on:
+      - api
+
 volumes:
   pgdata:
