--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,5 +67,31 @@ services:
     depends_on:
       - api
 
+  airflow:
+    image: apache/airflow:2.9.3
+    environment:
+      AIRFLOW__CORE__EXECUTOR: LocalExecutor
+      AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: ${DATABASE_URL}
+      AIRFLOW__CORE__LOAD_EXAMPLES: "false"
+    volumes:
+      - ./airflow/dags:/opt/airflow/dags
+    ports:
+      - "8080:8080"
+    command: >
+      bash -c "
+      airflow db migrate &&
+      airflow users create
+        --username admin
+        --password admin
+        --firstname Admin
+        --lastname User
+        --role Admin
+        --email admin@example.com &&
+      airflow webserver & airflow scheduler
+      "
+    depends_on:
+      db:
+        condition: service_healthy
+
 volumes:
   pgdata:
