--- a/.env
+++ b/.env
@@ -2,9 +2,9 @@ POSTGRES_USER=fitburn
 POSTGRES_PASSWORD=fitburn
 POSTGRES_DB=fitburn
 
-DATABASE_URL=postgresql+psycopg://fitburn:fitburn@db:5432/fitburn
+DATABASE_URL=postgresql+psycopg2://fitburn:fitburn@db:5432/fitburn
 
 RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672/
 QUEUE_NAME=workouts
 
-MODEL_VERSION=stub-v0
+MODEL_VERSION=catboost-v1
