--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,11 +70,12 @@ services:
       - api
 
   airflow:
-    build: ./airflow
+    image: apache/airflow:2.9.3
     environment:
       AIRFLOW__CORE__EXECUTOR: LocalExecutor
       AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: ${AIRFLOW_DB_URL}
       AIRFLOW__CORE__LOAD_EXAMPLES: "false"
+      _PIP_ADDITIONAL_REQUIREMENTS: "apache-airflow-providers-postgres==5.13.1 psycopg2-binary==2.9.9"
     volumes:
       - ./airflow/dags:/opt/airflow/dags
     ports:
