--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -75,10 +75,12 @@ services:
       AIRFLOW__CORE__EXECUTOR: LocalExecutor
       AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: ${AIRFLOW_DB_URL}
       AIRFLOW__CORE__LOAD_EXAMPLES: "false"
+      AIRFLOW__WEBSERVER__WEB_SERVER_HOST: "0.0.0.0"
+      AIRFLOW__WEBSERVER__WEB_SERVER_PORT: "8080"
     volumes:
       - ./airflow/dags:/opt/airflow/dags
     ports:
-      - "8080:8080"
+      - "8088:8080"
     command: >
       bash -c "
       airflow db migrate &&
@@ -88,8 +90,9 @@ services:
         --firstname Admin
         --lastname User
         --role Admin
-        --email admin@example.com &&
-      airflow webserver & airflow scheduler
+        --email admin@example.com || true &&
+      airflow webserver --host 0.0.0.0 --port 8080 &
+      airflow scheduler
       "
     depends_on:
       db:
